Fix focus effect cut off - Closes https://github.com/kamilmielnik/scrabble-solver/issues/218

--- a/packages/scrabble-solver/src/components/Results/Results.module.scss
+++ b/packages/scrabble-solver/src/components/Results/Results.module.scss
@@ -31,7 +31,6 @@ $row-padding-horizontal: calc(var(--spacing--m) + var(--spacing--s));
   justify-content: space-between;
   border-bottom: var(--border);
   font-weight: 700;
-  overflow: auto;
 }
 
 .headerButton {
